(Fix)Aligning to Center the Container

--- a/Luna/src/index.css
+++ b/Luna/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+    font-size: 16px;
+    font-family: 'Poppins';
+}
